<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bg"
        android:contentDescription="@string/img"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_cat" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_animal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_mammal"
                android:textColor="@color/title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="@dimen/ic_love_detail"
            android:layout_height="@dimen/ic_love_detail"
            android:layout_gravity="end"
            android:layout_marginEnd="60dp"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/ic_phone" />

        <ImageView
            android:id="@+id/iv_emotion"
            android:layout_width="@dimen/ic_love_detail"
            android:layout_height="@dimen/ic_love_detail"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/img"
            android:src="@drawable/ic_unlike"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_emotion_like"
            android:layout_width="@dimen/ic_love_detail"
            android:layout_height="@dimen/ic_love_detail"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/img"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_like" />
    </FrameLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/hello_blank_fragment"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>